--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -56,10 +56,10 @@ en:
       focus_area: "Área de focalización"
       actions: "Acciones"
       public: "Publico"
-      guide_me: "Guide Me"
-      step_one: "Para comenzar a trabajar se debe crear un <strong>Nuevo proyecto</strong>"
-      step_two: "In these tabs you will see the projects in which you work <strong>(My project)</strong> and shared community projects <strong>(Other projects)</strong>"
-      step_three: "To get started on the project you can click on the name or select one of the functions of the column <strong>Actions</strong>"
+      guide_me: "Guíame"
+      step_one: "Para comenzar a trabajar debe crear un <strong>Nuevo proyecto</strong>"
+      step_two: "En estas pestañas podrás ver los proyectos en los que estas trabajando<strong>(Mis proyectos)</strong> y proyectos comunitarios compartidos<strong>(Otros proyectos)</strong>"
+      step_three: "Para comenzar a trabajar en el proyecto se debe hacer clic en el nombre o seleccionar la función de <strong>Acciones</strong>"
       config: "Configuración del proyecto"
       share: "Compartir el proyecto"
       edit: "Editar"
@@ -79,54 +79,54 @@ en:
     show:     # http://localhost:3000/projects/1
       projects: "Proyectos"
       stages: "Etapas"
-      dashboard: "Dashboard"
+      dashboard: "Panel de control"
       documents: "Documentos"
       overview: "Resumen"
-      step_one: "Once the project page you will see 3 tabs. In <strong>Stages</strong> are the stages of data entry, <strong>Dashboard</strong> will show indicators of success and progress , will be the <strong>Documents</strong> library of important documents , and finally <strong>Overview</strong> showing the summary of all the information entered"
-      step_two: "Let's start with the advocacy plan by completing the information requested in the <strong>Stage 1</strong>"
-      step_three: "These icons show you the 3 states of data entry. They'll tell you if you need to fill a previous step (<i class='fa fa-lock'></i>), if they are ready to income (<i class='fa fa-unlock'></i>) or it contains information (<i class='fa fa-check'></i>)"
-      stage1_title: "Step 1: Describe the problems and the corresponding policy solutions"
-      stage2_title: "Step 2: Formulate policy objetives and rank them in order or priority"
-      stage3_title: "Step 1: Set Goals"
+      step_one: "Una vez que abra la página del proyecto verá 3 pestañas. Las <strong>Etapas</strong> son las fases del ingreso de datos, en <strong>Panel de control</strong> se muestran los indicadores de progreso, en <strong>Documentos</strong> una biblioteca de documentos importantes, y finalmente en <strong>Resumen</strong> se muestra el compendio de toda la información"
+      step_two: "Vamos a comenzar con la planificación de advocacy completando la información requerida en la <strong>Etapa 1</strong>"
+      step_three: "Estos iconos muestran los tres estados de de entrada de datos. Te dirán si tienes que completar un paso anterior(<i class='fa fa-lock'></i>), si están listos para el ingreso (<i class='fa fa-unlock'></i>) o que contienen información (<i class='fa fa-check'></i>)"
+      stage1_title: "Step 1: Describa el problema y la correspondiente solución de política pública"
+      stage2_title: "Step 2: Formular los objetivos y ordenarlos en orden de prioridad"
+      stage3_title: "Step 1: Establecer metas"
       stage3_without_objectives: |
-                    <p>You need add objectives for settings goals</p>
+                    "<p>Necesitas agregar objetivos para para establecer la meta</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>"
       objective_cnt: 'objectivos'
     overview:     # http://localhost:3000/projects/1#overview
       projects: "Proyectos"
       overview: "Resumen"
-      empty: "( empty field )"
-      uncreated: "( uncreated )"
+      empty: "( Campo vacío )"
+      uncreated: "( No creado )"
     dashboard:    # http://localhost:3000/projects/1#dashboard
       activities: "Actividades"
       successful_activities: "Actividades exitosas"
       neutral_activities: "Actividades neutrales"
       failed_activities: "Actividades fallidas"
-      completed_activities_rate: "Completed activities rate"
-      success_rate: "Success rate"
-      state_of_activities: "State of activities last months"
-      upcoming_activities: "Upcoming activities"
+      completed_activities_rate: "Completar tasa de actividades"
+      success_rate: "Tasa de exito"
+      state_of_activities: "Estado de las actividades de los últimos meses"
+      upcoming_activities: "Próximas actividades"
       all_activities: "Ver todas las actividades"
-      date: "Date"
-      activity: "Activity"
-      overdue_activities: "Overdue activities"
-      unfinished_activities: "Unfinished activities"
-      interim_outcomes: "Interim Outcomes"
-      outcomes_without_activities: "outcomes without activities"
-      outcomes_without_upcoming_activities: "outcomes without upcoming activities"
-      outcomes_with_overdue_activities: "outcomes with overdue activities"
-      percentage_interim_outcomes_achieved: "Percentage interim outcomes achieved"
-      percentage_allocation_of_predefined_activities: "Percentage allocation of predefined activities"
-      objetives: "Objetives"
-      objectives_without_interim_outcomes: "Objectives without interim outcomes"
-      objectives_with_failed_activities: "Objectives with failed activities"
-      percentage_advance_priority_objectives: "Percentage advance priority objectives"
-      percentage_of_total_advance_objectives: "Percentage of total advance objectives"
+      date: "Datos"
+      activity: "actividad"
+      overdue_activities: "Actividades vencidas"
+      unfinished_activities: "Actividades no finalizadas"
+      interim_outcomes: "Resultados intermedios"
+      outcomes_without_activities: "Resultados sin actividades"
+      outcomes_without_upcoming_activities: "Resultados sin próximas actividades"
+      outcomes_with_overdue_activities: "Resultados sin actividades vencidas"
+      percentage_interim_outcomes_achieved: "Porcentaje de resultados intermedios logrados"
+      percentage_allocation_of_predefined_activities: "Asignación de Porcentaje a actividades predefinidas"
+      objetives: "Objetivos"
+      objectives_without_interim_outcomes: "Objectivos sin resultados intermedios"
+      objectives_with_failed_activities: "Objectivos sin actividades fallidas"
+      percentage_advance_priority_objectives: "Porcentaje de avance de los objetivos priorizados"
+      percentage_of_total_advance_objectives: "Porcentaje total de avance de los objectivos"
     #
     # Stage 1
     #
@@ -149,7 +149,7 @@ en:
       add_button: "Agregar"
       edit_button: "Editar"
       explanation_examples: "Explicaciones y Ejemplos"
-      workshop_tips: "Workshop Tips"
+      workshop_tips: "Concejos para el taller"
       policies_text: "La identificación y definición del problema debe responder a por qué la temática en cuestión puede ser considerada como un problema, además de acotarla a un contexto territorial, a uno temporal y mencionar la población que resulta afectada. También es necesario tener en consideración que un problema público tiene causas múltiples y que la identificación de estas puede estar determinada por la forma en que se defina el problema."
       error_focus_area: "Error al obtener información del área de focalización"
       error_project: "Error al obtener información del proyecto"
@@ -237,11 +237,11 @@ en:
       subtitle1_tooltip: "La meta puede ser entendida como el gran cambio que resultará de la planificación de advocacy, por lo cual en este punto es necesario señalar cómo la estrategia ayudará a cambiar de forma positiva la situación inicial o “problemática”."
       subtitle2: "Formular las soluciones políticas como objectivos"
       subtitle2_tooltip: "Los objetivos son los propósitos que la organización busca alcanzar en el transcurso de 3 a 5 años. También pueden ser entendidos como los cambios en políticas públicas que se desean alcanzar a través de la estrategia de advocacy."
-      data_entry: "Data Entry"
+      data_entry: "Ingreso de datos"
       explanation_examples: "Explicaciones y Ejemplos"
       add_objective_button: "Agregar objetivos"
       policy_solutions_button: "Soluciones políticas"
-      without_objectives_begin_sentence: "There are still "
+      without_objectives_begin_sentence: "Todavía hay"
       without_objectives_end_sentence: "Soluciones de política pública sin objetivos"
       objectives: "Objetivos"
       subtotal_key_contribution: "Subtotal contribución clave"
@@ -277,7 +277,7 @@ en:
       solutions: "Soluciones"
       title: "Título"
       description: "Descripción"
-      back_button: "Back"
+      back_button: "Volver"
     objective_modal: # modal `add objective` of stage 2
       objective: "Objectivos"
       select_solution: "Seleccionar solución"
@@ -388,8 +388,8 @@ en:
       subtitle3_tooltip: "Gracias al análisis del ciclo de toma de decisiones y el mapeo de actores, ya habrán identificado una serie de factores que permitirán lograr los objetivos y otros que serán un freno, sin embargo puede que sea necesario profundizar aún más el contexto que rodea el cambio deseado. Una forma de profundizar más es a través de la identificación de factores habilitantes y barreras, los que pueden propiciar el cumplimiento de los objetivos de advocacy o entorpecer y dificultar la estrategia."
       guide_me: "Guíame"
       step_one: "It draws the decision-making cycles using the draw.io application, a new tab will open in your browser"
-      step_two: "Add to actors involved in your advocacy plan with the <strong>Add Actor button</strong>, then you can edit or delete actions column"
-      step_three: "Enter the factors holding (<strong>Barriers</strong>) and help (<strong>Enabling Factors</strong>) to your advocacy objetives"
+      step_two: "Agregar a los actores involucrados en el plan de advocacy con <strong>Agregar actor</strong>, luego puede editar o eliminar la columna de acciones"
+      step_three: "Ingrese las barreras en (<strong>Barreras</strong>) y los factores habilitantes en (<strong>Factores habilitantes</strong>) para lograr sus objectivos de advocacy"
       data_entry: "Ingreso de datos"
       explanation_examples: "Explicaciones y ejemplos"
       draw_sandbox_button: "Draw in draw.io"
@@ -690,7 +690,7 @@ en:
       subtitle2_explanation: "Para efectos de la planificación y coordinación, es útil poner las actividades a realizar en Trello. La integración con Trello estará disponible pronto."
       data_entry: "Ingreso de datos"
       explanation_examples: "Explicaciones y ejemplos"
-      workshop_tips: "Workshop Tips"
+      workshop_tips: "Consejos para el taller"
       add_button: "Agregar"
       without_activities: "En este punto se deben describir las principales acciones que llevarán al cambio deseado."
       activities: "Actividades"
@@ -950,7 +950,7 @@ en:
       subtitle1_explanation: "Una petición debe ser clara, concisa, centrada en el resultado y adaptada a cada actor. Las peticiones también pueden ser entendidas como una solicitud a un actor clave o un grupo de actores para que estos lleven a cabo una acción que genere el cumplimiento de los resultados intermedios."
       data_entry: "Ingreso de datos"
       explanation_examples: "Explicaciones y ejemplos"
-      workshop_tips: "Workshop Tips"
+      workshop_tips: "Consejos para el taller"
       add_button: "Agregar"
       actor: "Actor"
       ask: "Petición"
@@ -1046,7 +1046,7 @@ en:
       add_button: "Agregar"
       edit_button: "Editar"
       explanation_examples: "Explicaciones y Ejemplos"
-      workshop_tips: "Workshop Tips"
+      workshop_tips: "Consejos para el taller"
       policies_text: "Como se mencionaba anteriormente, detrás de los problemas públicos existen múltiples causas, incluyendo los programas políticos y las malas prácticas relacionadas con el ambiente político. La labor de la estrategia de advocacy se refiere a causas tales como mecanismos de gobernabilidad deficientes, la existencia de un marco jurídico inadecuado o la presencia de relaciones de poder desequilibradas. Por lo anterior, el análisis del problema debería priorizar la identificación a estas causas en lugar de otros factores explicativos del problema público."
       error_focus_area: "Error al obtener la información del área de focalización"
       error_project: "Error al obtener la información del proyecto"
